fix alignment of icon picker and add timeout function call for initialisation function, tag 2.0.8

--- a/src/css/bct.scss
+++ b/src/css/bct.scss
@@ -370,7 +370,8 @@ body .iconpicker .iconpicker-item {
   padding: 8px 0 0;
 }
 
-.iconpicker-input + .in.bottom {
+.iconpicker-input + .in.bottom,
+.iconpicker-input + div + .in.bottom {
   left: 0 !important;
 }
 
